# LD40

./: .gitignore  CMakeLists.txt  README.md
data/anims/: downfist.json  knight.json  tipsy.json
data/meta/: campaign.json
data/stages/: level0.json  level1.json  level2.json  level3.json  test.json
data_src/client/: face.blend  ore_crystal.blend  ore_deposit.blend  terrain.kra
emberjs_shim_src/: config.cpp
ext/ginseng/include/ginseng/: ginseng.hpp
ext/msdfgen/: CMakeLists.txt
ext/sushi/: CMakeLists.txt
ext/sushi/src/sushi/: framebuffer.cpp  framebuffer_cubemap.cpp  gl.hpp  mesh.cpp  mesh.hpp  texture.cpp
src/: animated_sprite.cpp  animated_sprite.hpp  basic_shader.cpp  basic_shader.hpp  components.cpp  components.hpp  editload_state.cpp  editload_state.hpp  editor_state.cpp  editor_state.hpp  end_state.cpp  end_state.hpp  entities.cpp  entities.hpp  font.cpp  font.hpp  gameplay_state.cpp  gameplay_state.hpp  main.cpp  mainloop.cpp  mainloop.hpp  mainmenu_state.cpp  mainmenu_state.hpp  platform.cpp  platform.hpp  random.cpp  random.hpp  resource_cache.hpp  resources.cpp  resources.hpp  scripting.hpp  sdl.hpp  shell.html  soloud.cpp  soloud.hpp  sprite.cpp  sprite.hpp  spritesheet.cpp  spritesheet.hpp  text.cpp  (+6 more)
src/emberjs/: config.cpp  config.hpp  websocket.cpp  websocket.hpp
static/scripts/: config.js
